--- a/package.json
+++ b/package.json
@@ -55,9 +55,7 @@
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
     "uuid": "^3.2.1",
-    "winston": "^2.4.0"
-  },
-  "devDependencies": {
+    "winston": "^2.4.0",
     "@types/async": "^2.0.45",
     "@types/bcrypt-nodejs": "^0.0.30",
     "@types/bluebird": "^3.5.20",
@@ -84,16 +82,18 @@
     "@types/shelljs": "^0.7.8",
     "@types/supertest": "^2.0.4",
     "@types/winston": "^2.3.7",
+    "node-sass": "^4.7.2",
+    "ts-node": "^5.0.0",
+    "typescript": "^2.7.2"
+  },
+  "devDependencies": {
     "chai": "^4.1.2",
     "concurrently": "^3.5.1",
     "jest": "^22.0.4",
-    "node-sass": "^4.7.2",
     "nodemon": "^1.13.0",
     "shelljs": "^0.8.1",
     "supertest": "^3.0.0",
     "ts-jest": "^22.0.4",
-    "ts-node": "^5.0.0",
-    "tslint": "^5.9.1",
-    "typescript": "^2.7.2"
+    "tslint": "^5.9.1"
   }
 }
