--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "npm": "3.10.10"
   },
   "scripts": {
-    "start": "npm run serve",
+    "start": "npm run build && npm run serve",
     "build": "npm run build-sass && npm run build-ts && npm run tslint && npm run copy-static-assets",
     "serve": "node dist/server.js",
     "watch-node": "nodemon dist/server.js",
@@ -66,7 +66,6 @@
     "@types/errorhandler": "^0.0.32",
     "@types/express": "^4.11.1",
     "@types/express-session": "^1.15.8",
-    "@types/jest": "^22.1.3",
     "@types/jquery": "^3.2.17",
     "@types/lodash": "^4.14.91",
     "@types/lusca": "^1.5.0",
@@ -79,14 +78,15 @@
     "@types/passport-facebook": "^2.1.7",
     "@types/passport-local": "^1.0.32",
     "@types/request": "^2.47.0",
-    "@types/shelljs": "^0.7.8",
-    "@types/supertest": "^2.0.4",
     "@types/winston": "^2.3.7",
     "node-sass": "^4.7.2",
     "ts-node": "^5.0.0",
     "typescript": "^2.7.2"
   },
   "devDependencies": {
+    "@types/jest": "^22.1.3",
+    "@types/shelljs": "^0.7.8",
+    "@types/supertest": "^2.0.4",
     "chai": "^4.1.2",
     "concurrently": "^3.5.1",
     "jest": "^22.0.4",
