--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "@types/request": "^2.47.0",
     "@types/winston": "^2.3.7",
     "node-sass": "^4.7.2",
+    "tslint": "^5.9.1",
     "ts-node": "^5.0.0",
     "typescript": "^2.7.2"
   },
@@ -93,7 +94,6 @@
     "nodemon": "^1.13.0",
     "shelljs": "^0.8.1",
     "supertest": "^3.0.0",
-    "ts-jest": "^22.0.4",
-    "tslint": "^5.9.1"
+    "ts-jest": "^22.0.4"
   }
 }
