--- a/package.json
+++ b/package.json
@@ -33,10 +33,9 @@
   "dependencies": {
     "@types/async": "^2.0.50",
     "@types/bcrypt-nodejs": "^0.0.30",
-    "@types/bluebird": "^3.5.24",
     "@types/body-parser": "^1.16.8",
     "@types/compression": "^0.0.35",
-    "@types/connect-mongo": "^0.0.35",
+    "@types/connect-mongodb-session": "0.0.0",
     "@types/dotenv": "^4.0.2",
     "@types/errorhandler": "^0.0.32",
     "@types/express": "^4.11.1",
@@ -45,7 +44,7 @@
     "@types/lodash": "^4.14.117",
     "@types/lusca": "^1.5.0",
     "@types/mongodb": "^3.1.14",
-    "@types/mongoose": "^4.7.39",
+    "@types/mongoose": "^5.2.22",
     "@types/morgan": "^1.7.35",
     "@types/node": "^9.6.35",
     "@types/nodemailer": "^4.6.5",
@@ -56,10 +55,9 @@
     "@types/shelljs": "^0.7.8",
     "async": "^2.6.0",
     "bcrypt-nodejs": "^0.0.3",
-    "bluebird": "^3.5.2",
     "body-parser": "^1.18.2",
     "compression": "^1.7.3",
-    "connect-mongo": "^2.0.0",
+    "connect-mongodb-session": "^2.0.3",
     "dotenv": "^4.0.0",
     "errorhandler": "^1.5.0",
     "express": "^4.16.4",
@@ -69,7 +67,8 @@
     "fbgraph": "^1.4.1",
     "lodash": "^4.17.11",
     "lusca": "^1.6.1",
-    "mongoose": "^4.13.17",
+    "mongodb": "^3.1.8",
+    "mongoose": "^5.3.8",
     "node-sass": "^4.9.4",
     "nodemailer": "^4.6.8",
     "passport": "^0.4.0",
