--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "watch-debug": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-sass\" \"npm run watch-ts\" \"npm run serve-debug\""
   },
   "dependencies": {
+    "@types/app-root-path": "^1.2.4",
     "@types/async": "^2.0.50",
     "@types/bcrypt-nodejs": "^0.0.30",
     "@types/body-parser": "^1.16.8",
@@ -51,8 +52,11 @@
     "@types/passport": "^0.4.7",
     "@types/passport-facebook": "^2.1.7",
     "@types/passport-local": "^1.0.32",
+    "@types/puppeteer": "1.12.1",
     "@types/request": "^2.48.1",
     "@types/shelljs": "^0.7.8",
+    "@types/winston": "^2.4.4",
+    "app-root-path": "^2.1.0",
     "async": "^2.6.0",
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.18.2",
@@ -67,6 +71,7 @@
     "fbgraph": "^1.4.1",
     "lodash": "^4.17.11",
     "lusca": "^1.6.1",
+    "moment": "^2.24.0",
     "mongodb": "^3.1.10",
     "mongoose": "^5.3.15",
     "node-sass": "^4.11.0",
@@ -75,6 +80,7 @@
     "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
     "pug": "^2.0.0-rc.4",
+    "puppeteer": "1.12.1",
     "request": "^2.88.0",
     "request-promise": "^4.2.2",
     "shelljs": "^0.8.3",
@@ -82,7 +88,7 @@
     "tslint": "^5.11.0",
     "typescript": "^2.9.2",
     "uuid": "^3.3.2",
-    "winston": "^2.4.4"
+    "winston": "^3.1.0"
   },
   "devDependencies": {
     "@types/jest": "^22.1.3",
