--- a/package.json
+++ b/package.json
@@ -48,10 +48,13 @@
     "@types/mongoose": "^5.3.4",
     "@types/morgan": "^1.7.35",
     "@types/node": "^9.6.40",
+    "@types/node-sass": "^4.11.0",
     "@types/nodemailer": "^4.6.5",
+    "@types/numeral": "0.0.25",
     "@types/passport": "^0.4.7",
     "@types/passport-facebook": "^2.1.7",
     "@types/passport-local": "^1.0.32",
+    "@types/pug": "^2.0.4",
     "@types/puppeteer": "1.12.1",
     "@types/request": "^2.48.1",
     "@types/shelljs": "^0.7.8",
@@ -76,10 +79,11 @@
     "mongoose": "^5.3.15",
     "node-sass": "^4.11.0",
     "nodemailer": "^4.7.0",
+    "numeral": "^2.0.6",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
-    "pug": "^2.0.0-rc.4",
+    "pug": "^2.0.3",
     "puppeteer": "1.12.1",
     "request": "^2.88.0",
     "request-promise": "^4.2.2",
